feat(client): modification de l'update
